# larlite

./: .gitignore  .gitmodules  CMakeLists.txt
UserDev/BasicTool/: CMakeLists.txt  GNUmakefile
UserDev/BasicTool/EMShowerTools/: EMShowerContainment.cxx  EMShowerContainment.h  EMShowerProfile.cxx  EMShowerProfile.h  EMShowerTools-TypeDef.h  GNUmakefile  LinkDef.h  sample.cxx  sample.h
UserDev/BasicTool/FhiclLite/: CfgFileReader.cxx  CfgFileReader.h  ConfigManager.cxx  ConfigManager.h  FhiclLite-TypeDef.h  FhiclLiteException.cxx  FhiclLiteException.h  FhiclLiteUtilFunc.cxx  FhiclLiteUtilFunc.h  GNUmakefile  LinkDef.h  PSet.cxx  PSet.h  PSetManager.cxx  PSetManager.h  Parser.cxx  Parser.h  UtilFunc.cxx  UtilFunc.h  aho.txt  baka.txt  boko.txt
UserDev/BasicTool/GeoAlgo/: DistToBoxWall.cxx  DistToBoxWall.h  DistanceAlgo.cxx  DistanceAlgo.h  GNUmakefile  GeoAABB.h  GeoAABox.cxx  GeoAABox.h  GeoAlgo-TypeDef.h  GeoAlgo.cxx  GeoAlgo.h  GeoAlgoConstants.h  GeoAlgoException.h  GeoAlgoMPLBackEnd.cxx  GeoAlgoMPLBackEnd.h  GeoCone.cxx  GeoCone.h  GeoCylinder.cxx  GeoCylinder.h  GeoDirectedLine.cxx  GeoDirectedLine.h  GeoHalfLine.cxx  GeoHalfLine.h  GeoLine.cxx  GeoLine.h  GeoLineSegment.cxx  GeoLineSegment.h  GeoObjCollection.cxx  GeoObjCollection.h  GeoObjects.cxx  GeoObjects.h  GeoSphere.cxx  GeoSphere.h  GeoTrajectory.cxx  GeoTrajectory.h  GeoVector.cxx  GeoVector.h  IntersectAlgo.cxx  IntersectAlgo.h  LinkDef.h  (+8 more)
UserDev/BasicTool/GeoAlgo_MOVED_InLArCoreObj/: GNUmakefile  GeoAABox.h  GeoAlgo.cxx
UserDev/BasicTool/LArPyBackend/: CMakeLists.txt  GNUmakefile  LArPyBackend-TypeDef.h  LinkDef.h  PyGeoObj.cxx  PyGeoObj.h  PyLArBackend-TypeDef.h
UserDev/BasicTool/ParticleTree/: GNUmakefile  LinkDef.h  MakeParticleTree.cxx  MakeParticleTree.h  ParticleTree-TypeDef.h
UserDev/BasicTool/TreeGraph/: #Manager.cxx#  AlgoBase.cxx  AlgoBase.h  AlgoGenericConflictBase.cxx  AlgoGenericConflictBase.h  AlgoGenericConflictComplex.cxx  AlgoGenericConflictComplex.h  AlgoGenericConflictFindHighestScore.cxx  AlgoGenericConflictFindHighestScore.h  AlgoGenericConflictRemoveSibling.cxx  AlgoGenericConflictRemoveSibling.h  AlgoMultipleParentsBase.cxx  AlgoMultipleParentsBase.h  AlgoMultipleParentsHighScore.cxx  AlgoMultipleParentsHighScore.h  AlgoParentIsSiblingsSibling.cxx  AlgoParentIsSiblingsSibling.h  AlgoParentIsSiblingsSiblingBase.cxx  AlgoParentIsSiblingsSiblingBase.h  AlgoSibHasDiffParent.cxx  AlgoSibHasDiffParent.h  CMakeLists.txt  Correlation.cxx  Correlation.h  GNUmakefile  LinkDef.h  Manager.cxx  Manager.h  Node.cxx  Node.h  NodeCollection.cxx  NodeCollection.h  Relation.cxx  Relation.h
UserDev/BasicTool/TwoDimTools/: GNUmakefile  Linearity.cxx  Linearity.h  LinkDef.h  Poly2D.cxx  Poly2D.h  Polygon2D.cxx  Polygon2D.h
UserDev/BasicTool/doc/: doxygenMyProject.script
UserDev/LArLiteApp/: CMakeLists.txt  GNUmakefile
UserDev/LArLiteApp/AnaNdk/: AnaNdkModeThirteen.cxx  AnaNdkModeThirteen.h  AnaNdkModeZero.cxx  AnaNdkModeZero.h  GNUmakefile  LinkDef.h
UserDev/LArLiteApp/CCSingleE/: ERAnaBackgroundsSingleE.cxx  ERAnaBackgroundsSingleE.h  ERAnaSingleE.cxx  ERAnaSingleE.h  ERAnaSingleEKaleko.cxx  ERAnaSingleEKaleko.h  ERAnaSingleE_NCBkgd.cxx  ERAnaSingleE_NCBkgd.h  ERAnaToy.cxx  ERAnaToy.h  ERAnanumuCC_MisID.cxx  ERAnanumuCC_MisID.h  ERAnatestTree.cxx  ERAnatestTree.h  GNUmakefile  LinkDef.h  MC_CC1E_Filter.cxx  MC_CC1E_Filter.h  MC_CCQE_Filter.cxx  MC_CCQE_Filter.h  MC_Dirt_Filter.cxx  MC_NC_Filter.cxx  MC_NC_Filter.h  NP_Filter.cxx  NP_Filter.h  SingleEAna.cxx  SingleEAna.h  empty.cxx  empty.h
UserDev/LArLiteApp/CCSingleMu/: AlgoCCSingleMu.cxx  AlgoCCSingleMu.h  CCSingleMuAna.cxx  CCSingleMuAna.h  CCSingleMuFilter.cxx  CCSingleMuFilter.h  CCSingleMuReco.cxx  ERAlgoCCSingleMu.cxx  ERAlgoCCSingleMu.h  ERAnaCCSingleMu.cxx  ERAnaCCSingleMu.h  GNUmakefile  (+7 more)
UserDev/SelectionTool/: .gitignore  CMakeLists.txt  GNUmakefile
core/: CMakeLists.txt  GNUmakefile
core/Analysis/: Analysis-TypeDef.h  Analysis-TypeDef.hh  CMakeLists.txt  GNUmakefile  LinkDef.h  README  ana_base.cxx  ana_base.h  ana_processor.cxx  ana_processor.h
core/Base/: AnalysisConstants.h  Base-TypeDef.h  CMakeLists.txt  DataFormatConstants.cxx  DataFormatConstants.h  DecoderConstants.h  DetectorStatusTypes.h  FEMConstants.h  FrameworkConstants.h  GNUmakefile  GeoConstants.h  GeoTypes.h  LinkDef.h  MCConstants.h  RawConstants.h  RecoTypes.h  UtilFunc.cxx  UtilFunc.h  larlite_base.cxx  larlite_base.h  messenger.cxx  messenger.h
core/DataFormat/: CMakeLists.txt  DataFormat-TypeDef.h  DataFormatException.cxx  DataFormatException.h  GNUmakefile  LinkDef.h  PiZeroROI.cxx  PiZeroROI.h  auxsimch.cxx  auxsimch.h  backtrackermatchingdata.cxx  backtrackermatchingdata.h  calorimetry.cxx  calorimetry.h  chstatus.cxx  chstatus.h  cluster.cxx  cluster.h  cosmictag.cxx  cosmictag.h  crthit.cxx  crthit.h  crttrack.cxx  crttrack.h  daqheadertimeuboone.cxx  daqheadertimeuboone.h  data_base.cxx  data_base.h  data_type.cxx  data_type.h  david.py  endpoint2d.cxx  endpoint2d.h  event_ass.cxx  event_ass.h  fifo.cxx  fifo.h  flashmatch.cxx  flashmatch.h  gtruth.cxx  (+104 more)
core/LArUtil/: CMakeLists.txt  ClockConstants.h  DetectorProperties.cxx  DetectorProperties.h  ElecClock.cxx  ElecClock.h  GNUmakefile  Geometry.cxx  Geometry.h  GeometryHelper.cxx  GeometryHelper.h  GeometryUtilities.cxx  GeometryUtilities.h  InvalidWireError.cxx  InvalidWireError.h  LArProperties.cxx  LArProperties.h  LArUtil-TypeDef.h  LArUtilBase.cxx  LArUtilBase.h  LArUtilConfig.cxx  LArUtilConfig.h  LArUtilConstants.h  LArUtilException.cxx  LArUtilException.h  LArUtilManager.cxx  LArUtilManager.h  LinkDef.h  PxHitConverter.cxx  PxHitConverter.h  PxUtils.h  SpaceChargeMicroBooNE.cxx  SpaceChargeMicroBooNE.h  SpaceChargeMicroBooNEInterface.cxx  SpaceChargeMicroBooNEInterface.h  SpaceChargeMicroBooNEMCC8.cxx  SpaceChargeMicroBooNEMCC8.h  SpaceChargeMicroBooNEMCC9.cxx  SpaceChargeMicroBooNEMCC9.h  TimeService.cxx  (+1 more)
core/WrappedLarSoftDictionaries/: GNUmakefile  LArLite_WrappedLarSoftDictionaries.cxx  LinkDef.h  classes.h  dummyWrappedLarSoftDictionaries.cxx  dummyWrappedLarSoftDictionaries.h
(+2323 files in other folders)
